# Terminal

./: .gitignore  issue-20053-aumid-investigation.md
.squad/: config.json  decisions.md  routing.md  team.md
.squad/agents/dallas/: charter.md  history.md
.squad/agents/lambert/: charter.md  history.md
.squad/agents/parker/: charter.md  history.md
.squad/agents/ripley/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
doc/cascadia/: profiles.schema.json
src/cascadia/CascadiaPackage/: CascadiaPackage.wapproj  Package-Dev.appxmanifest
src/cascadia/LocalTests_TerminalApp/: CommandlineTest.cpp  TabTests.cpp
src/cascadia/TerminalApp/: AppActionHandlers.cpp  AppCommandlineArgs.cpp  DesktopNotification.cpp  IPaneContent.idl  OverviewPane.cpp  OverviewPane.h  OverviewPane.idl  OverviewPane.xaml  Pane.cpp  Pane.h  Tab.cpp  Tab.h  TabManagement.cpp  TabRowControl.xaml  TerminalAppLib.vcxproj  TerminalPage.cpp  TerminalPage.h  TerminalPage.idl  TerminalPage.xaml  TerminalPaneContent.cpp  TerminalPaneContent.h  TerminalWindow.cpp  TerminalWindow.h  TerminalWindow.idl  pch.h
src/cascadia/TerminalControl/: ControlCore.cpp  ControlCore.h  ControlCore.idl  ControlInteractivity.cpp  (+12 more)
src/host/: outputStream.cpp  outputStream.hpp
src/inc/: conpty-static.h
src/tools/wtr/: Cargo.toml  rust-toolchain.toml
src/tools/wtr/.cargo/: config.toml
src/types/: ScreenInfoUiaProviderBase.cpp  utils.cpp
src/winconpty/: winconpty.cpp
tools/: GenerateSettingsIndex.ps1
(+143 files in other folders)
